fix: Adjust to follow Spring Boot 3.5.3🫸🌀✏️📗🐧🐳⬆